    or XPDF security issues, since we don't use that codebase; we call
    external programs who do and that's where the bug should be filed.

  [ Martin Pitt ]
  * cupsys.init.d: Remove stray chown'ing to 'cupsys' which does not exist any
    more. (closes: #436662)
  * cupsys.init.d: Fix detection of parallel printers when 'lp' is already
    loaded. (https://launchpad.net/bugs/29050)

 -- Martin-Éric Racine <q-funk@iki.fi>  Thu, 09 Aug 2007 20:11:05 +0200

cupsys (1.2.12-2) unstable; urgency=low

  [ Kenshi Muto ]
  * Added scripting directory to /usr/share/doc/cupsys/examples.
    This directory contains the binding code from Java, Perl, and PHP
    to CUPS. (closes: #193076)
    Although we Debian CUPS team cannot afford to maintain them,
    some of you may want them.
  * Added 'Recommends: cupsys' to cupsys-bsd. (closes: #426521)
  * Changed cupsys-client from 'Recommends: cupsys-bsd' to 'Suggests:
    cupsys-bsd.' because cupsys-bsd isn't so necessary for cupsys-client.
  * Fixed to use 'cupsys' instead of 'cups' for PAM on cups-check-pam-auth.
    (though Debian CUPS doesn't use this daemon) (closes: #425701)
  * Added debconf-2.0 to the dependency of cupsys-bsd. (closes: #415684)

  [ Martin Pitt ]
  * Drop the derooting changes. It still has some regressions, and with
    upstream not even acknowledging the need for improving cupsys' security we
    will sit on this forever. This will be replaced by an AppArmor/SELinux
    profiles in the future.
    - Drop derooting related patches:
      06_disable_backend_setuid.dpatch
      10_external_pam_helper.dpatch
      09_runasuser.dpatch
      09_runasuser_autoconf.dpatch
    - debian/cupsys{,-client}.postinst: Drop the 'cupsys' user setup and file
      permission juggling.
    - debian/rules:
      + Drop --with-cups-user configure option.
      + Do not modify the upstream default backend permissions.
    - debian/cupsys.init.d: Do not touch log file permissions any more.