@@ -10,8 +10,9 @@ cupsys (1.2.12-3) UNRELEASED; urgency=low
     more. (closes: #436662)
   * cupsys.init.d: Fix detection of parallel printers when 'lp' is already
     loaded. (https://launchpad.net/bugs/29050)
+  * debian/cupsys.init.d: Put back 'reload'.
 
- -- Martin-Éric Racine <q-funk@iki.fi>  Thu, 09 Aug 2007 20:11:05 +0200
+ -- Martin Pitt <mpitt@debian.org>  Thu, 09 Aug 2007 20:47:42 +0200
 
 cupsys (1.2.12-2) unstable; urgency=low
 
